Fix slider not working on safari and some other browsers.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -50,6 +50,7 @@ body > header > section > img {
 .wrapper img {
     image-rendering: pixelated;
     margin: 0 auto;
+    height: 100%;
 }
 
 .slides {
